--- a/clase_20211025/index.html
+++ b/clase_20211025/index.html
@@ -5,9 +5,23 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SASS</title>
-    <link style="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
+    <div>
+        <h1>Mi primera página con SASS (*.scss)</h1>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero animi atque neque impedit culpa tempora dolor soluta nisi numquam, ut eligendi enim, dignissimos voluptatem ea sapiente quod facere aliquid. Recusandae?
+        </p>
+    </div>
+
+    <div class="container">
+        <div class="success">Success</div>
+        <div class="warning">Warning</div>
+        <div class="error">Error</div>
+        <div class="info">Info</div>
+    </div>
+
     
 </body>
 </html>
