Explicando arreglos y matrices

--- a/clase_20211105/index.html
+++ b/clase_20211105/index.html
@@ -7,6 +7,7 @@
     <title>Java Script Fndamentals</title>
     <script src="./scripts/operators.js"></script>
     <script src="./scripts/conditionals.js"></script>
+    <script src="./scripts/data_structures.js"></script>
 </head>
 <body>
     
